fix header spacing

--- a/packages/bobba-original-theme/src/public/css/RoleplayTheme.scss
+++ b/packages/bobba-original-theme/src/public/css/RoleplayTheme.scss
@@ -244,10 +244,6 @@ input {
    background: lighten(rgb(0, 23, 38), 10%) !important;
  }
 
-.header-container .header-content {
-  padding-top: 45px !important;
-}
-
 .page-container .page-content article.default-section, .page-container .page-content aside.default-section {
   border: none !important;
   border-radius: 4px;
